force-app/main/default/objects/Batch_Job_Monitor_Item__c/Batch_Job_Monitor_Item__c.object-meta.xml
<CustomObject>
    <label>Batch Job Monitor Item</label>
    <nameField>
        <displayFormat>BJMI-{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Batch Job Monitor Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BatchJobMonitorItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>