force-app/main/default/objects/Batch_Job_Monitor_Item__c/fields/Affected_record__c.field-meta.xml
<CustomField>
    <fullName>Affected_record__c</fullName>
    <label>Affected record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>