force-app/main/default/objects/Batch_Job_Monitor_Item__c/fields/Error_Phase__c.field-meta.xml
<CustomField>
    <fullName>Error_Phase__c</fullName>
    <label>Error Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>START</fullName>
            </value>
            <value>
                <fullName>EXECUTE</fullName>
            </value>
            <value>
                <fullName>FINISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>