force-app/main/default/objects/Batch_Job_Monitor_Item__c/fields/Parent_Job_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Parent_Job_Monitor__c</fullName>
    <label>Parent Job Monitor</label>
    <referenceTo>Batch_Job_Monitor__c</referenceTo>
    <relationshipLabel>BatchJobMonitorItems</relationshipLabel>
    <relationshipName>BatchJobMonitorItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>