force-app/main/default/objects/Batch_Job_Monitor_Item__c/fields/stack_trace__c.field-meta.xml
<CustomField>
    <fullName>stack_trace__c</fullName>
    <label>stack trace</label>
    <type>TextArea</type>
</CustomField>