force-app/main/default/objects/Batch_Job_Monitor_Item__c/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>NAME</columns>
    <columns>Parent_Job_Monitor__c</columns>
    <columns>Error_Phase__c</columns>
    <columns>Affected_record__c</columns>
    <columns>Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>MyView</label>
    <language>en_US</language>
</ListView>